# objective-metrics

./: .gitignore  LICENSE  README.md  log_parsers.py  pyproject.toml
Docker/: Dockerfile_host-cuda_cpu-decord  Dockerfile_host-cuda_gpu-decord  Dockerfile_within-cuda_gpu-decord  README.md
datasets_configs/: avt-vqdb-uhd-1.yaml  avt-vqdb-uhd-1_list.json  avt-vqdb-uhd-1_pairs.json  bvi-hfr.yaml  bvi-hfr_list.json  bvi-hfr_pairs.json  cid2013.yaml  cid2013_list.json  cvd2014.yaml  cvd2014_list.json  cvqad.yaml  cvqad_list.json  cvqad_pairs.json  gaming.yaml  gaming_list.json  gaming_pairs.json  kadid10k.yaml  kadid10k_list.json  kadid10k_pairs.json  koniq10k.yaml  koniq10k_list.json  konvid1k.yaml  konvid1k_list.json  kosmo1k.yaml  kosmo1k_list.json  kosmo1k_pairs.json  kugvd.yaml  kugvd_list.json  kugvd_pairs.json  live-apv-livestream.yaml  live-apv-livestream_list.json  live-hfr.yaml  live-hfr_list.json  live-hfr_pairs.json  live-itw.yaml  live-itw_list.json  live-mob-svd.yaml  live-mob-svd_list.json  live-mob-svd_pairs.json  live-nflx.yaml  (+21 more)
objective_metrics/: objective_metrics_run.py
objective_metrics/modules/fr_iqa/: video.py
objective_metrics/modules/image_features/: video.py
objective_metrics/modules/nr_iqa/: video.py
objective_metrics/modules/nr_vqa/: dover.py  fastvqa.py  mdtvsfa.py  (+1 more)
objective_metrics/scripts/: pipeline_fr_iqa_imageset.py  pipeline_fr_iqa_videoset.py  pipeline_fr_vqa_videoset.py  pipeline_image_features_imageset.py  pipeline_image_features_videoset.py  pipeline_nr_iqa_imageset.py  pipeline_nr_iqa_videoset.py  pipeline_nr_vqa_videoset.py
(+33 files in other folders)
